--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
