--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "node src/index.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "lint": "eslint src",
     "prepare": "husky install"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2"
   },
