--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "lint": "eslint src",
@@ -13,7 +14,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.2"
+    "mongoose": "^8.0.2",
+    "nodemon": "^3.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
