--- a/data/package.json
+++ b/data/package.json
@@ -7,8 +7,7 @@
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "lint": "eslint src",
-    "prepare": "husky install"
+    "lint": "eslint src"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -21,7 +20,6 @@
     "nodemon": "^3.0.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@types/react-dom": "^18.2.15",
     "eslint": "^8.54.0",
@@ -29,16 +27,8 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "lint-staged": "^15.1.0",
     "mongodb-memory-server": "^9.1.1",
     "prettier": "^3.1.0"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx}": [
-      "npx prettier --write",
-      "npx eslint --fix"
-    ]
   }
 }
